fix a vertical align

--- a/src/screens/MainScreen/Main.scss
+++ b/src/screens/MainScreen/Main.scss
@@ -1,15 +1,24 @@
 .main-screen {
     font-size: 24px;
     background: url('../../assets/images/main_background.png');
-    background-size: cover;
+    background-size: contain;
     height: 100%;
     min-height: 100vh;
     width: 100%;
+    
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    
+
+
+    &:before { //ie
+        content: "";
+        display: inline-block;
+        min-height: 120px;
+        visibility: hidden;
+    }
+
     .screen-title {
         font-family: "Exo", sans-serif;
         font-size: 36px;
